Contact Us Captncha hide

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -368,9 +368,9 @@
         <div class="w-full p-2 md:p-3">
           <textarea id="message" name="description" placeholder="Description" rows="3" class="form-control dInput small rounded-lg"></textarea>
         </div>
-        <div class="w-full p-2 md:p-3">
+        <!-- <div class="w-full p-2 md:p-3">
           <div class="g-recaptcha" data-sitekey="6LfvKNQlAAAAAM8ns2Q7eTAjceBLQz85lEUBpr5P"></div>
-        </div>
+        </div> -->
         <div class="w-full text-left p-2 md:p-3">
           <button type="submit" class="btn-border group anim rounded-full border">
             <span class="bleft anim group-hover:left-0"></span>
