--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -85,9 +85,9 @@
               <textarea name="description" rows="5" placeholder="Your Message" class="form-control dInput small rounded-lg mt-0 md:mt-2.5"></textarea>
             </label>
           </div>
-          <div class="w-full p-2 md:p-3">
+          <!-- <div class="w-full p-2 md:p-3">
             <div class="g-recaptcha" data-sitekey="6LfvKNQlAAAAAM8ns2Q7eTAjceBLQz85lEUBpr5P"></div>
-          </div>
+          </div> -->
           <!-- <div class="w-full lg:w-3/12 p-3">
             <label class="leading-7 text-sm lg:text-lg text-scalelot-primary dark:text-white font-medium">Upload File
               <input type="file" name="uploadFile" class="hidden" />
