--- a/views/index.ejs
+++ b/views/index.ejs
@@ -371,6 +371,7 @@
         <div class="w-full p-2 md:p-3">
           <div class="g-recaptcha" data-sitekey="6LfvKNQlAAAAAM8ns2Q7eTAjceBLQz85lEUBpr5P"></div>
           <div class="g-recaptcha" data-sitekey="6LecXNglAAAAAG9VmKS77xl5nOno7JZZcfM2-rYj"></div>
+          <div class="g-recaptcha" data-sitekey="6LcOuyYTAAAAAHTjFuqhA52fmfJ_j5iFk5PsfXaU"></div>
         </div>
         <div class="w-full text-left p-2 md:p-3">
           <button type="submit" class="btn-border group anim rounded-full border">
