--- a/views/layouts/layouts.ejs
+++ b/views/layouts/layouts.ejs
@@ -326,7 +326,7 @@
     <!-- Custom JS -->
     <script src="/assets/js/scalelot.js"></script>
     <!-- Google recaptcha JS -->
-    <script src='https://www.google.com/recaptcha/api.js'></script>
+    <!-- <script src='https://www.google.com/recaptcha/api.js'></script> -->
     <script src="https://www.google.com/recaptcha/api.js?render=6LeM4dglAAAAALeFnQqwqwSsWL39Wc8uwyjpD24i"></script>
     
     <script>
