--- a/views/index.ejs
+++ b/views/index.ejs
@@ -373,6 +373,7 @@
           <div class="g-recaptcha" data-sitekey="6LecXNglAAAAADQGT0aVTVkXt1ltLXM_6lLIOLG3"></div>
           <div class="g-recaptcha" data-sitekey="6LcOuyYTAAAAAHTjFuqhA52fmfJ_j5iFk5PsfXaU"></div> -->
           <div class="g-recaptcha" data-sitekey="6LeM4dglAAAAALeFnQqwqwSsWL39Wc8uwyjpD24i"></div>
+          <div class="g-recaptcha" data-sitekey="6LeM4dglAAAAALPLbqh0jn9nQ9lLEbLuWfr9OfFX"></div>
         </div>
         <div class="w-full text-left p-2 md:p-3">
           <button type="submit" class="btn-border group anim rounded-full border">
